# DumbWaiter

./: .editorconfig  .gitignore  LICENSE  README.md  config.yaml  dumb_waiter.py  pyproject.toml  requirements.txt  run_resilient_dumb_waiter.ps1
dumb_waiter_tray/: README.md  build_tray_exe.ps1  tray_app.py
dumb_waiter_tray/scripts/: install_startup_task.ps1  remove_startup_task.ps1
