[project]
name = "dumb-waiter"
version = "0.0.1"
description = "Auto-click 'Accept all' or 'Run' in windows matching a title regex (UIA-based)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "coldfact" },
]

dependencies = [
    "pyyaml",
    "pyautogui",
    "pywinauto",
]

[project.optional-dependencies]
tray = [
    "pystray",
    "Pillow",
]
dev = [
    "pytest",
    "pyinstaller",
]

[project.urls]
Repository = "https://github.com/coldfact/dumb_waiter"
